<resources>
    <string name="app_name">船载北斗显控终端</string>

    <string-array name="dangerType">
        <item>沉船</item>
        <item>搁浅</item>
        <item>碰撞</item>
        <item>火灾</item>
        <item>风灾</item>
        <item>伤病</item>
        <item>抓扣</item>
        <item>故障</item>
    </string-array>

    <string name="dangerType_1">沉船</string>
    <string name="dangerType_2">搁浅</string>
    <string name="dangerType_3">碰撞</string>
    <string name="dangerType_4">火灾</string>
    <string name="dangerType_5">风灾</string>
    <string name="dangerType_6">伤病</string>
    <string name="dangerType_7">抓扣</string>
    <string name="dangerType_8">故障</string>

    // 用于分割 短信模版
    <string name="smsTemplateSeparate">`xk`sp`</string>

    // serial test
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>

    <string name="wifi_ssid">船载北斗显控终端_WIFI</string>

    <string name="setting_tab_1">北斗参数</string>
    <string name="setting_tab_2">卫星分布</string>
    <string name="setting_tab_3">报警设置</string>
    <string name="setting_tab_4">服务状态</string>
    <string name="setting_tab_5">气象信息</string>
    <string name="setting_tab_6">系统设置</string>

    <string-array name="smsTemplate">
        <item>固定短信模版1</item>
        <item>固定短信模版2</item>
        <item>固定短信模版3</item>
        <item>固定短信模版4</item>
        <item>固定短信模版5</item>
        <item>固定短信模版6</item>
        <item>固定短信模版7</item>
        <item>固定短信模版8</item>
        <item>固定短信模版9</item>
        <item>固定短信模版10</item>
        <item>固定短信模版11</item>
        <item>固定短信模版12</item>
        <item>固定短信模版13</item>
        <item>固定短信模版14</item>
        <item>固定短信模版15</item>
        <item>固定短信模版16</item>
        <item>固定短信模版17</item>
        <item>固定短信模版18</item>
        <item>固定短信模版19</item>
        <item>固定短信模版20</item>
    </string-array>

    <string-array name="friendName">
        <item>船1舱内(28060017)</item>
        <item>船2舱内(28060062)</item>
        <item>船3舱内(28060031)</item>

        <item>吴(13732587260)</item>
        <item>徐(13705830170)</item>

        <item>平台(372741)</item>
        <item>船载北斗设备(256218)</item>
    </string-array>

    <string-array name="friendNumber">
        <item>407477</item>
        <item>407479</item>
        <item>407478</item>

        <item>13732587260</item>
        <item>13705830170</item>

        <item>372741</item>
        <item>256218</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
