<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="遇险类型："
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/border_clo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_1"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_5"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_2"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_6"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_3"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_7"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_4"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/checkbox_selector"
                android:text="@string/dangerType_8"
                android:textColor="@color/red"
                android:textSize="10sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/border_clo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:background="@drawable/button_bg_selector"
            android:text="确认"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:textStyle="bold"/>


    </LinearLayout>



</LinearLayout>