<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ly_tab1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_tab_1"
                android:textColor="@color/text_clo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_tab_2"
                android:textColor="@color/text_clo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_tab_3"
                android:textColor="@color/text_clo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_tab_4"
                android:textColor="@color/text_clo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_tab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_tab_5"
                android:textColor="@color/text_clo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_tab6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_tab6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_tab_6"
                android:textColor="@color/text_clo"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/img_tab_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/tab_line"/>

</LinearLayout>